# MagnaDesign

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  validation-fea-benchmark.yml
data/: cores.json  materials.json  wires.json
data/mas/: cores.json  materials.json  wires.json
data/mas/catalog/: materials.json  wires.json
data/pyetk/: cores.json  materials.json
data/spice_comparison/: spice_compare_summary.csv
docs/: FEA.md  Makefile  PERFORMANCE.md  POSITIONING.md  RELEASE.md  UI.md  cascade-benchmarks.md  cascade.md  conf.py  index.rst  release-secrets.md
docs/_static/: version-selector.css
docs/_templates/sidebar/: version-selector.html
docs/adr/: 0001-positioning.md
docs/getting-started/: cli.rst  first-design.rst  install.rst
docs/reference/: index.rst
docs/theory/: compliance.rst  dowell.rst  feasibility.rst  overview.rst  rolloff.rst  steinmetz-igse.rst  thermal.rst
docs/topology/: boost-ccm.rst  buck-ccm.rst  interleaved-boost-pfc.rst  line-reactor.rst  passive-choke.rst
docs/user-guide/: 01-overview.md  02-spec-drawer.md  03-core-selection.md  04-analysis-tab.md  05-optimizer.md  06-comparison.md  07-fea-validation.md  08-exports.md  09-headless-cli.md  10-troubleshooting.md  index.rst
examples/: 01-boost-pfc-1500w.pfc  02-line-reactor-22kw.pfc  02-line-reactor-600w.pfc  03-flyback-dcm-65w.pfc  600W_boost_example.pfc  600W_boost_reference.pfc  buck_12V_to_3V3_10W.pfc  flyback_12V_to_5V_10W.pfc  interleaved_boost_11kW_3phase.pfc  interleaved_boost_3kW_2phase.pfc  line_reactor_600W.pfc
img/: logo.icns
openspec/: README.md  project.md
openspec/changes/add-acoustic-noise-prediction/: proposal.md  tasks.md
openspec/changes/add-bh-loop-visual/: proposal.md  tasks.md
openspec/changes/add-buck-ccm-topology/: proposal.md  tasks.md
openspec/changes/add-cascade-optimizer/: proposal.md  tasks.md
openspec/changes/add-circuit-export/: design.md  proposal.md
openspec/changes/add-cli-headless-runner/: proposal.md  tasks.md
openspec/changes/add-code-signed-installers/: tasks.md
openspec/changes/add-compliance-report-pdf/: tasks.md
openspec/changes/add-cost-model/: proposal.md
openspec/changes/add-crash-reporting/: tasks.md
openspec/changes/add-cross-platform-setup/: proposal.md
openspec/changes/add-fea-validation/: proposal.md  tasks.md
openspec/changes/add-femmt-integration/: design.md  proposal.md  tasks.md
openspec/changes/add-flyback-topology/: design.md  proposal.md  tasks.md
openspec/changes/add-interleaved-boost-pfc/: design.md  tasks.md
openspec/changes/add-lcl-grid-tie-filter/: design.md  proposal.md  tasks.md
openspec/changes/add-litz-optimizer/: tasks.md
openspec/changes/add-manufacturing-spec-export/: tasks.md
openspec/changes/add-mas-catalog-import/: proposal.md  tasks.md
openspec/changes/add-mas-schema-adoption/: proposal.md  tasks.md
openspec/changes/add-psfb-output-choke/: design.md  proposal.md  tasks.md
openspec/changes/add-similar-parts-finder/: tasks.md
openspec/changes/add-theory-of-operation-docs/: tasks.md
openspec/changes/add-topology-schematic-card/: tasks.md
openspec/changes/add-validation-reference-set/: proposal.md  tasks.md
openspec/changes/add-vfd-modulation-workflow/: tasks.md
openspec/changes/add-worst-case-tolerance-doe/: proposal.md  tasks.md
openspec/changes/protect-differentials/: proposal.md  tasks.md
openspec/changes/redesign-ui-flow-v3/: proposal.md  tasks.md
openspec/changes/refactor-3d-viewer-controls/: proposal.md  tasks.md
openspec/changes/refactor-ui-dashboard-cards/: proposal.md  tasks.md
openspec/changes/refactor-ui-design-system-v2/: tasks.md
openspec/changes/refactor-ui-shell/: tasks.md
openspec/changes/replace-femmt-with-direct-fea/: design.md  proposal.md  tasks.md
openspec/changes/ui-refactor-followups/: tasks.md
openspec/specs/fea-direct-backend/: spec.md
packaging/: magnadesign-macos.spec  magnadesign-win.spec  magnadesign.spec  pfc-inductor.spec
packaging/macos/: entitlements.plist
presentation/: Makefile  README.md  main.tex
presentation/scripts/: build_gui_renders.py  build_placeholders.py  build_screenshots.py
presentation/theme/: magnadesign-colors.tex
scripts/: benchmark_shapes_vs_femmt.py  cascade_benchmark.py  cascade_cli.py  datasheet_compare_dongxing.py  extend_dongxing_ei.py  generate_appcast.py  generate_docs_screenshots.py  generate_icons.py  import_mas_catalog.py  import_mas_cores.py  import_powder_xlsx.py  import_pyetk_catalog.py  import_xlsm.py  migrate_to_mas.py  spice_compare_line_reactor.py
src/pfc_inductor/: __init__.py  __main__.py  app_identity.py  data_loader.py  errors.py  history.py  positioning.py  project.py  settings.py
src/pfc_inductor/acoustic/: __init__.py  model.py
src/pfc_inductor/cli/: __init__.py  cascade.py  catalog.py  (+11 more)
tests/: test_about_dialog.py  test_acoustic_card.py  test_acoustic_model.py  test_analise_page.py  test_bh_loop.py  test_boost_ccm.py  test_cascade_band_aware.py  test_cascade_cli.py  test_cascade_models.py  test_cascade_orchestrator.py  test_cascade_page.py  test_cascade_page_in_main_window.py  test_cascade_page_widgets.py  test_cascade_pareto_chart.py  test_cascade_protocol.py  test_cascade_refine.py  test_cascade_refresh_worker.py  test_cascade_run_history.py  test_cascade_store.py  test_cascade_tier0.py  test_cascade_tier1.py  test_cascade_tier2.py  test_cascade_tier3.py  test_cascade_tier4.py  test_cli_cascade.py  test_cli_compliance.py  test_cli_datasheet_catalog_report.py  test_cli_dispatch.py  test_cli_worst_case.py  test_closed_path_no_autogap.py  test_compare.py  test_compare_dialog_reorder.py  test_compliance_dispatcher.py  test_compliance_tab.py  test_core_loss.py  test_cost.py  test_dashboard_page.py  test_dashboard_visual.py  test_data_loader.py  test_design_engine.py  (+78 more)
tests/benchmarks/: cores.yaml
tests/fixtures/: powder_cores_sample.xlsx
validation/: README.md  notebook_template.ipynb  thresholds.yaml
validation/lib/: __init__.py  compare.py  measure_loader.py
(+353 files in other folders)
