[project]
name = "pfc-inductor-designer"
version = "0.1.0"
description = "Desktop tool for designing PFC inductors (active boost CCM and passive line choke) for refrigerator-compressor inverters"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # FEMMT 0.5.x bounds upper end at 3.12
dependencies = [
    "PySide6>=6.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "matplotlib>=3.9",
    "platformdirs>=4.2",
    "pyvista>=0.47",
    "pyvistaqt>=0.11",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# FEA validation backend (FEMMT). Pinned because FEMMT 0.5.x has hard
# constraints on scipy and setuptools that conflict with newer wheels.
# Install with `uv pip install -e ".[fea]"` on Python 3.12.
fea = [
    "femmt>=0.5,<0.6",
    "scipy>=1.12,<1.14",
    "setuptools<70",
]

[project.scripts]
pfc-inductor = "pfc_inductor.__main__:main"
pfc-inductor-setup = "pfc_inductor.setup_deps.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pfc_inductor = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
