[project]
name = "pfc-inductor-designer"
version = "0.1.0"
description = "Desktop tool for designing PFC inductors (active boost CCM and passive line choke) for refrigerator-compressor inverters"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # FEMMT 0.5.x bounds upper end at 3.12
dependencies = [
    "PySide6>=6.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "matplotlib>=3.9",
    "platformdirs>=4.2",
    "pyvista>=0.47",
    "pyvistaqt>=0.11",
    "openpyxl>=3.1",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "black>=24.0",
]
# FEA validation backend (FEMMT). Pinned because FEMMT 0.5.x has hard
# constraints on scipy and setuptools that conflict with newer wheels.
# Install with `uv pip install -e ".[fea]"` on Python 3.12.
fea = [
    "femmt>=0.5,<0.6",
    "scipy>=1.12,<1.14",
    "setuptools<70",
]

[project.scripts]
pfc-inductor = "pfc_inductor.__main__:main"
pfc-inductor-setup = "pfc_inductor.setup_deps.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# ``py.typed`` (PEP 561) tells type-checkers that the package ships
# inline annotations; without it, mypy/pyright in downstream projects
# treat ``pfc_inductor`` as untyped third-party.
pfc_inductor = ["data/*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# `-m "not slow"` keeps the regular run under three minutes; the CLI
# subprocess tests add ~17 min and are gated behind the `slow` marker.
# Run them on demand with: ``uv run pytest -m slow``.
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: end-to-end tests that spawn subprocesses or load the full DB; opt-in via -m slow",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "vendor",
    "src/pfc_inductor/fea/legacy",
    ".venv",
    # PyInstaller spec files are interpreted by PyInstaller's spec
    # runner, not Python directly: ``Analysis``/``PYZ``/``EXE``/
    # ``COLLECT``/``BUNDLE`` are injected globals, so static linters
    # (correctly) flag them as F821. The spec file already declares
    # ``# ruff: noqa: F821`` but excluding the directory keeps the
    # noise out of bulk ``ruff check src`` runs.
    "packaging",
]

[tool.ruff.lint]
# Defaults (E/F/W) plus: bugbear, isort, pyupgrade, ruff-specific.
extend-select = ["B", "I", "UP", "RUF"]
ignore = [
    "E501",   # line length handled by formatter; long QSS strings are fine.
    "B008",   # Qt accepts `def f(x=QObject())` as a UI factory pattern.
    "UP007",  # `Optional[X]` reads better than `X | None` in Pydantic Field defaults.
    "UP045",  # Same — keep `Optional[T]` for non-Pydantic widget signatures.
    "UP035",  # Allow ``typing.X`` aliases (Iterable, etc.) — not worth the churn.
    # Domain text uses Unicode technical symbols intentionally:
    # ``×`` for "by" (3×3, A×B), ``–``/``−`` for B–H curves and ±DC busses,
    # ``μ`` for permeability. ASCII would lose the engineering legibility.
    "RUF001", # ambiguous Unicode in string literals (e.g. "B–H curve").
    "RUF002", # ambiguous Unicode in docstrings.
    "RUF003", # ambiguous Unicode in comments (schematic ASCII art labels).
]

[tool.ruff.lint.per-file-ignores]
# UI uses lazy imports inside methods to avoid pulling Qt at module import.
"src/pfc_inductor/ui/*" = ["E402"]
# Tests freely poke private members for regression coverage.
"tests/*" = ["B011", "RUF001"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false  # ramp up gradually; UI is not yet fully typed.
no_implicit_optional = true
check_untyped_defs = true
exclude = [
    "tests/",
    "vendor/",
    "src/pfc_inductor/fea/legacy/",
    ".venv/",
]

# Domain layer is pure Python — hold it to a higher bar.
[[tool.mypy.overrides]]
module = [
    "pfc_inductor.models.*",
    "pfc_inductor.physics.*",
    "pfc_inductor.topology.*",
    "pfc_inductor.design.*",
    "pfc_inductor.optimize.*",
    "pfc_inductor.standards.*",
    "pfc_inductor.errors",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# MAS adapter bridges OpenMagnetics' camelCase Pydantic schema; the
# vendored type stubs disagree with the field-alias usage at runtime.
# Loosen rather than fight the third-party shape.
[[tool.mypy.overrides]]
module = ["pfc_inductor.models.mas.adapters"]
ignore_errors = true

# Third-party libs without stubs — silence missing-imports for these only.
[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "pyvista.*",
    "pyvistaqt.*",
    "matplotlib.*",
    "scipy.*",
    "femmt.*",
    "openpyxl.*",
]
ignore_missing_imports = true
