[project]
# Distribution name renamed from ``pfc-inductor-designer`` to
# ``magnadesign`` as the app outgrew its original PFC-only scope and
# now covers active boost-CCM, passive chokes, and 1φ/3φ line
# reactors. The Python package name remains ``pfc_inductor`` to avoid
# a mass-rename of import sites; the ``magnadesign`` CLI entry point
# below is the new public name.
name = "magnadesign"
version = "0.1.0"
description = "MagnaDesign — topology-aware desktop suite for inductor design across PFC, passive chokes, and line reactors"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # FEMMT 0.5.x bounds upper end at 3.12
dependencies = [
    "PySide6>=6.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "matplotlib>=3.9",
    "platformdirs>=4.2",
    "pyvista>=0.47",
    "pyvistaqt>=0.11",
    "openpyxl>=3.1",
    "pandas>=2.2",
    # Headless CLI: ``magnadesign design / sweep / cascade / report``
    # subcommands (see openspec/changes/add-cli-headless-runner). Click
    # is also used by the FEA setup CLI in ``setup_deps/cli.py``; we
    # promote it to a top-level dep so the GUI build can import the
    # CLI module unconditionally.
    "click>=8.1",
    # Native PDF datasheet generation (vector charts, embedded fonts,
    # proper page-break control). The HTML datasheet generator
    # (``html_report.py`` / ``datasheet.py``) stays for screen-grade
    # previews; PDF is the print/customer artefact and avoids the
    # browser-print pitfalls (background colours stripped, font
    # substitution, fragile page breaks).
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "black>=24.0",
    # ``validation/lib/measure_loader.py`` parses ``thresholds.yaml``
    # via PyYAML; the matching ``tests/test_validation_lib.py``
    # imports the loader at collection time, so the dev install
    # needs PyYAML even though no production code path requires it.
    "pyyaml>=6.0",
    # ``.pre-commit-config.yaml`` runs ruff-format + ruff --fix on
    # every commit. Bundling pre-commit in [dev] means a fresh
    # checkout only needs ``uv pip install -e ".[dev]"`` followed
    # by ``pre-commit install`` to enable the hook locally.
    "pre-commit>=3.5",
]
# Opt-in crash reporting + usage analytics — the runtime degrades
# to a no-op when this extra isn't installed (defensive imports
# in ``pfc_inductor.telemetry``). Enable with
# ``uv pip install -e ".[telemetry]"`` on the maintainer build.
telemetry = [
    "sentry-sdk>=2.0",
]
# Auto-update Ed25519 signature verification — pulls
# ``cryptography`` so the bundled ``pfc_inductor.updater`` can
# verify Sparkle ``sparkle:edSignature`` attributes against the
# maintainer's pinned public key. Without this extra the
# signature verifier returns ``SignatureCheckResult.UNAVAILABLE``
# and the GUI shows a "verification disabled" badge.
updater = [
    "cryptography>=42.0",
]
# Numba JIT acceleration for the cascade hot loops — see
# ``docs/PERFORMANCE.md`` for the benchmark (54× on the
# Steinmetz inner loop, ~3-5× on the full engine.design()
# pipeline). Opt-in because Numba + LLVM add ~50 MB to the
# bundle; users on weak PCs benefit, users with capacity to
# spare can skip the install. The runtime falls back to the
# pure-numpy code path when Numba isn't installed — same
# numbers, just slower. Enable with
# ``uv pip install -e ".[performance]"`` on the maintainer build.
performance = [
    "numba>=0.60",
]
# FEA validation backend (FEMMT). Pinned because FEMMT 0.5.x has hard
# constraints on scipy and setuptools that conflict with newer wheels.
# Install with `uv pip install -e ".[fea]"` on Python 3.12.
fea = [
    "femmt>=0.5,<0.6",
    "scipy>=1.12,<1.14",
    "setuptools<70",
]
# Sphinx docs site — built locally via ``make -C docs html`` and
# auto-published to GitHub Pages by ``.github/workflows/docs.yml``
# on every push to main. Read the rendered theory chapters at
# https://magnadesign.dev/docs (when DNS lands; until then check
# the GitHub Pages URL surfaced in the workflow run summary).
docs = [
    # Upper bound at <9 because ``sphinx-multiversion`` (the
    # release-aware build driver) hasn't shipped a release that
    # tracks Sphinx 9's Config API change. Pinning here keeps
    # the multi-version build deterministic until upstream cuts
    # a compatible release.
    "sphinx>=7.0,<9",
    # ``furo`` — modern Sphinx theme used by pip / urllib3 / attrs.
    # Replaced ``sphinx-rtd-theme`` which still looks like 2014
    # and lacks first-class dark mode. Furo ships its dark-mode
    # toggle, mobile-friendly navigation, and a brand-colour
    # variable system out of the box.
    "furo>=2024.0",
    # Multi-version builder — runs ``sphinx-build`` once per
    # whitelisted git ref (release tags + ``main``) and stitches
    # the outputs together with a version selector. The Pages
    # site lands as ``/<version>/index.html`` so a customer pinned
    # to v0.7 can read the v0.7 docs even after v1.0 ships.
    "sphinx-multiversion>=0.2",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
    "sphinxcontrib-mermaid>=0.9",
    # MyST's ``linkify`` extension (auto-converts bare URLs to
    # links) is opt-in but the Sphinx build aborts with
    # "Linkify enabled but not installed." when the underlying
    # ``linkify-it-py`` is missing — pin it as a hard dep here.
    "linkify-it-py>=2.0",
]

[project.scripts]
# New canonical entry points — match the MagnaDesign brand.
magnadesign = "pfc_inductor.__main__:main"
magnadesign-setup = "pfc_inductor.setup_deps.cli:main"
# Back-compat aliases — kept so muscle-memory and any external
# wrapper scripts (Windows shortcuts, makefiles) keep working
# during the rename. Safe to drop in a future release once
# downstream callers have migrated.
pfc-inductor = "pfc_inductor.__main__:main"
pfc-inductor-setup = "pfc_inductor.setup_deps.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# ``py.typed`` (PEP 561) tells type-checkers that the package ships
# inline annotations; without it, mypy/pyright in downstream projects
# treat ``pfc_inductor`` as untyped third-party.
#
# ``report/fonts/*.ttf`` ships the Inter font family (SIL OFL 1.1)
# embedded into the native PDF datasheet generator. License text is
# alongside the fonts; remove the directory to fall back to the
# PDF built-in Helvetica.
pfc_inductor = [
    "data/*.json",
    "py.typed",
    "report/fonts/*.ttf",
    "report/fonts/LICENSE-*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# `-m "not slow"` keeps the regular run under three minutes; the CLI
# subprocess tests add ~17 min and are gated behind the `slow` marker.
# Run them on demand with: ``uv run pytest -m slow``.
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: end-to-end tests that spawn subprocesses or load the full DB; opt-in via -m slow",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "vendor",
    "src/pfc_inductor/fea/legacy",
    ".venv",
    # PyInstaller spec files are interpreted by PyInstaller's spec
    # runner, not Python directly: ``Analysis``/``PYZ``/``EXE``/
    # ``COLLECT``/``BUNDLE`` are injected globals, so static linters
    # (correctly) flag them as F821. The spec file already declares
    # ``# ruff: noqa: F821`` but excluding the directory keeps the
    # noise out of bulk ``ruff check src`` runs.
    "packaging",
]

[tool.ruff.lint]
# Defaults (E/F/W) plus: bugbear, isort, pyupgrade, ruff-specific.
extend-select = ["B", "I", "UP", "RUF"]
ignore = [
    "E501",   # line length handled by formatter; long QSS strings are fine.
    "B008",   # Qt accepts `def f(x=QObject())` as a UI factory pattern.
    "UP007",  # `Optional[X]` reads better than `X | None` in Pydantic Field defaults.
    "UP045",  # Same — keep `Optional[T]` for non-Pydantic widget signatures.
    "UP035",  # Allow ``typing.X`` aliases (Iterable, etc.) — not worth the churn.
    # Domain text uses Unicode technical symbols intentionally:
    # ``×`` for "by" (3×3, A×B), ``–``/``−`` for B–H curves and ±DC busses,
    # ``μ`` for permeability. ASCII would lose the engineering legibility.
    "RUF001", # ambiguous Unicode in string literals (e.g. "B–H curve").
    "RUF002", # ambiguous Unicode in docstrings.
    "RUF003", # ambiguous Unicode in comments (schematic ASCII art labels).
    # Power-electronics convention: ``I`` is current, ``L`` is inductance,
    # ``O`` is rarely a variable but reads naturally as "output". The
    # readability win of matching textbook notation outweighs the
    # generic "ambiguous identifier" warning.
    "E741",   # ambiguous variable name (`I`, `L`, `O`).
    # The cascade / sweep code keeps short lambdas as score-key
    # functions (``key=lambda c: c.cost``); promoting each to a
    # ``def`` adds noise without changing behaviour. PEP 8's lambda
    # rule is style-guide, not correctness.
    "E731",   # do not assign a lambda — fine for short-lived comparators.
]

[tool.ruff.lint.per-file-ignores]
# UI uses lazy imports inside methods to avoid pulling Qt at module import.
"src/pfc_inductor/ui/*" = ["E402"]
# FEA + 3D rendering modules guard heavy native imports (FEMMT,
# pyvista) behind module-level ``try/except`` blocks, which Ruff
# (correctly) reads as imports below the import-block boundary.
# The pattern is intentional — they're optional runtime deps.
"src/pfc_inductor/fea/*" = ["E402"]
"src/pfc_inductor/visual/*" = ["E402"]
"src/pfc_inductor/report/views_3d.py" = ["E402"]
# Tests freely poke private members for regression coverage.
# - B007: ``for shape_str, _ in pairs`` uses idx-only loops a lot.
# - B023: closure-over-loop-var is fine in pytest fixtures that
#   collect closures into a list before the loop ends.
# - E402: ``QT_QPA_PLATFORM = "offscreen"`` is set before importing
#   Qt-using modules — that's the whole point.
# - F841: tests sometimes assign intermediate values for clarity
#   even when they only assert later variants.
"tests/*" = ["B007", "B011", "B023", "E402", "F841", "RUF001"]
# Scripts are batch importers / one-shot CLI tools — strict-zip
# noise (B905) is more annoying than valuable. F841 likewise:
# scripts deliberately bind intermediate variables for readability
# during interactive debugging.
"scripts/*" = ["B905", "F841"]
# Validation notebooks set ``DESIGN_DIR`` etc. between import
# blocks (per-cell layout); the "import at top of cell" rule
# fights that pattern without buying anything.
"validation/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false  # ramp up gradually; UI is not yet fully typed.
no_implicit_optional = true
check_untyped_defs = true
exclude = [
    "tests/",
    "vendor/",
    "src/pfc_inductor/fea/legacy/",
    ".venv/",
]

# Domain layer is pure Python — hold it to a higher bar.
[[tool.mypy.overrides]]
module = [
    "pfc_inductor.models.*",
    "pfc_inductor.physics.*",
    "pfc_inductor.topology.*",
    "pfc_inductor.design.*",
    "pfc_inductor.optimize.*",
    "pfc_inductor.standards.*",
    "pfc_inductor.errors",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# MAS adapter bridges OpenMagnetics' camelCase Pydantic schema; the
# vendored type stubs disagree with the field-alias usage at runtime.
# Loosen rather than fight the third-party shape.
[[tool.mypy.overrides]]
module = ["pfc_inductor.models.mas.adapters"]
ignore_errors = true

# Third-party libs without stubs — silence missing-imports for these only.
[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "pyvista.*",
    "pyvistaqt.*",
    "matplotlib.*",
    "scipy.*",
    "femmt.*",
    "openpyxl.*",
]
ignore_missing_imports = true
